Actualizar permisos y roles en ServiceApiController y UserApiController, agregar usuario 'business' en UserSeeder,  modifico la documentación de API para reflejar cambios en roles
